--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -1,8 +1,9 @@
-#  Статистические критерии: линейные модели {#stats_criteria_linear} 
+#  Проверка линейной свзяи {#stats_criteria_linear} 
 
 ```{r, eval=TRUE, echo = FALSE, message = FALSE}
 library(tidyverse)
 library(kableExtra)
+library(viridis)
 studens_mat <- read_csv("student-mat.csv") %>% 
   rename_with(., ~ paste0(., "_mat"), .cols = c(absences, paid, G1, G2, G3)) -> studens_mat 
 studens_por <- read_csv("student-por.csv") %>% 
@@ -24,7 +25,12 @@ students %>%
 
 ## Линейная регрессия 
 
-## Корреляция и корреляционный тест
+Нулевая и альтернативная гипотезы:
+
+<p align="center">$H_0$: $\mu_1 = \mu_2$ </p>
+<p align="center">$H_1$: $\mu_1 \neq \mu_2$ </p>
+
+## Корреляционный анализ
 
 **Корреляция** -- это связь между переменными.
 
@@ -42,7 +48,7 @@ knitr::include_graphics("docs/images/correlation.jpeg")
 
 <p align="center"> $\text{cov}(x,y)=\frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{n-1}$</p>
 
-**Коэффициент корреляции** -- это показатель силы и направления связи между переменными. По сути это ковариация переменных, но взвешенная на стандартные отклонения этих переменных. Это сделано для того, чтобы стандартизовать коэффициент, уйти от абсолютных значений к относительным и расположить этот коэффицент в границах [-1;1]
+**Коэффициент корреляции** -- это показатель силы и направления связи между переменными. По сути это ковариация переменных, но взвешенная на стандартные отклонения этих переменных. Это сделано для того, чтобы стандартизовать коэффициент, уйти от абсолютных значений к относительным и расположить этот коэффицент в границах [-1;1]. Для коэффициента корреляции Пирсена:
 
 <p align="center"> $\text{corr}(x,y) = r_{xy} = \frac{\text{cov(x, y)}}{sd_x sd_y}$</p>
 
@@ -54,17 +60,75 @@ http://guessthecorrelation.com/
 
 ### Корреляционный тест
 
-Гипотезы о наличии корреляции между переменными проверяются при помощи корреляционного теста. Это точно такой же статистический критерий, по сути -- ровно то же самое, что линейная регрессия с одной переменной. Корреляционный тест применяется, когда и ЗП, и НП являются количественными переменными (не категориальными!)
+Гипотезы о наличии корреляции между переменными проверяются при помощи корреляционного теста. Это точно такой же статистический критерий, по сути -- ровно то же самое, что линейная регрессия с одной переменной. Корреляционный тест применяется, когда и ЗП, и НП являются количественными переменными либо выраженными в порядковкой шкале (но не номинативной). Для количественной шкалы обычно используется коэффициент корреляции Пирсена, для порядковой -- коэффициент корреляции Спирмена.
 
 Корреляционный тест использует -- вы не поверите -- уже знакомое нам T-распределение Стьюдента!
 (*то есть, нам надо запомнить вообще всего два распределения: T-распределение и F-распределение*)
 
+Число степеней свободы вычисляется по формуле
+
+<p align="center">$df = n - 2$, n -- число наблюдений </p>
+
+Нулевая и альтернативная гипотезы для корреляционного теста:
+
+<p align="center">$H_0$: $r_{xy} = 0$ </p>
+<p align="center">$H_1$: $r_{xy} \neq 0$ </p>
+
+Как и остальные критерии, он имеет допущения.
+
 ### Допущения для корреляционного теста
 
-1. Данные ЗП распределены нормально -- обсуждали эту проверку [здесь](#param_nonparam)
-2. Линейная монотонное распределение ЗП
+1. ЗП и НП измерены в количественной или порядковой шкале
+2. ЗП распределена нормально -- обсуждали эту проверку [здесь](#param_nonparam)
+3. ЗП распределена линейно и монотонно -- то есть нет выборосов, нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
 
+### Непараметрические аналоги
+
+Если ЗП сильно отличается от нормального распределения, или выборка мала, или ЗП закодирована в порядковой шкале -- в коррялционном тесте используется коэффициент корреляции Спирмена вместо Пирсена, и этоо единственное различие.
+
+### Расчет корреляционного теста
+
+Проведем тест для следующей гипотезы.
+
+> `Чем ниже студенты оценивают качество семейных отношений famrel, тем выше они отмечают частоту употребления алкоголя Walc `
+
+```{r eval=TRUE, echo = FALSE, message = FALSE}
+kable(students[1:10,]) %>% scroll_box(width = "100%") 
+```
+
+Пойдем также по алгоритму.
+
+ЗП -- порядковая, НП -- порядковая. Наша гипотеза не о сравнении групп, об ассоциативной (корреляционной) связи.
+
+Так как ЗП и НП порядковые, мне нужно использовать непараметрический аналог корреляциии Пирсона -- ранговую корреляцию Спирмена (либо порядковую логистическую регрессию (если я хочу, чтобы связь имела предсказательную силу)).
+
+```{r, eval=TRUE}
+cor.test(students$famrel, students$Walc, method = 'spearman')
+```
+Первый вариант визуализации -- мозаичный плот: размер плитки отражает частоту совпадения таких значений двух переменных. Указываем  НП как x=product(НП), и ЗП как fill = ЗП.
+
+```{r, eval=TRUE}
+library(ggmosaic)
+students %>% 
+  ggplot(aes()) + 
+  geom_mosaic(aes(x = product(famrel), fill = Walc)) +
+  scale_fill_viridis(discrete=TRUE) +
+  theme_minimal() 
+```
+
+Другой вариант -- хитмеп, как в коррелограмме, где размеры фиксированные, а за частоту совпадений отвечает цвет.
+```{r, eval=TRUE}
+students %>% 
+  ggplot(aes(x = as.factor(famrel), y = as.factor(Walc))) + 
+  geom_bin2d() +
+  scale_fill_viridis() +
+  theme_minimal() +
+  theme(panel.grid.major = element_blank(), 
+        panel.grid.minor = element_blank())
+```
 ### Интерпретация результатов
+
+Важно, что при очень большой выборке даже совсем слабая корреляционная связь будет достигать статистической с=значимости
 
 <p align="center"> 
 ```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
