--- a/09-ttest_anova.Rmd
+++ b/09-ttest_anova.Rmd
@@ -1,4 +1,4 @@
-# Сравнение средних по группам 
+# Сравнение средних по группам {#stats_criteria_ttest_anova} 
 
 ```{r, eval=TRUE, echo = FALSE, message = FALSE}
 library(tidyverse)
