--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -1,5 +1,8 @@
 #  Проверка линейной свзяи {#stats_criteria_linear} 
 
+До этого мы рассматривали виды статистического анализа, когда нужно было сравнить средние значения в нескольких группах. Зависимая переменная всегда была количественная (ее среднее значение по группам мы и сравнивали), а независимая -- категориальная, принимала конечное число значений, и каждое ее значение -- отдельный уровень НП, отдельная группа.
+
+Теперь мы переходим к статистическим критериям, которые используются, когда обе переменные, и ЗП, и НП -- количественные.
 ```{r, eval=TRUE, echo = FALSE, message = FALSE}
 library(tidyverse)
 library(kableExtra)
@@ -25,10 +28,39 @@ students %>%
 
 ## Линейная регрессия 
 
+Линейная регрессия -- метод анализа, ...
+
+Линейная регрессия -- это ровно та же известная нам ANOVA, только если заменить категориальные НП на количественные!
+
+### Коэффициенты регрессии
+
+Уравнение регрессионной прямой:
+<p align="center">$y = b_o + b_1x$ </p>
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/anova_SS.jpg")
+```
+</p>
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/lm_errors.jpeg")
+```
+</p>
+
+<p align="center">$b_{1_{xy}} = \frac{sd_y}{sd_x} r_{xy} $</p>
+
+<p align="center">$b_o = \bar y -b_{1_{xy}}\bar x $</p>
+
+Коэффициенты считаются таким образом, чтобы сумма квадратов остатков была минимальна. Это называется **методом наименьших квадратов**.
+
+### Тестирование коэффициентов регрессии
+
 Нулевая и альтернативная гипотезы:
 
-<p align="center">$H_0$: $\mu_1 = \mu_2$ </p>
-<p align="center">$H_1$: $\mu_1 \neq \mu_2$ </p>
+<p align="center">$H_0$: $b_{1_{xy}} = 0$ </p>
+<p align="center">$H_1$: $b_{1_{xy}} \neq 0$ </p>
 
 ## Корреляционный анализ
 
