--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -49,18 +49,42 @@ knitr::include_graphics("docs/images/lm_errors.jpeg")
 ```
 </p>
 
+
+
+Естьнесколько формул для вычисления коэффициентов линейной регрессии, но все они взаимовычисляемы. Вручную считать мы их не будем, поэтому что важно запомнить:
+
+* Коэффициент $b_1$ отвечает на наклон прямой **(slope)**
+* Коэффициент $b_0$ отвечает за смещение прямой вдоль оси y **(intercept)**
+* При подсчете коэффициентов первым высчитывается $b_1$, и он зависит от величины вариативности данных по переменным x и y (стандартных отклонений или дисперсий) и **в случае равной вариативности является коэффициентом корреляции** $r_{xy}$
+
 <p align="center">$b_{1_{xy}} = \frac{sd_y}{sd_x} r_{xy} $</p>
 
 <p align="center">$b_o = \bar y -b_{1_{xy}}\bar x $</p>
 
 Коэффициенты считаются таким образом, чтобы сумма квадратов остатков была минимальна. Это называется **методом наименьших квадратов**.
 
-### Тестирование коэффициентов регрессии
+### Регрессионный анализ (тестирование коэффициентов регрессии)
 
 Нулевая и альтернативная гипотезы:
 
 <p align="center">$H_0$: $b_{1_{xy}} = 0$ </p>
 <p align="center">$H_1$: $b_{1_{xy}} \neq 0$ </p>
+
+### Допущения для регрессионного анализа
+
+(ЗП и НП измерены в количественной или порядковой шкале)
+
+1. Распределение НП по ЗП линейно -- то есть нет выборосов, нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
+2. Остатки (residuals) распределены нормально -- все то же самое, как [здесь](#param_nonparam), только для остатков
+3. Остатки (residuals) варьируются примерно одинаково вдоль всей прямой (гомоскедастичность)
+https://gallery.shinyapps.io/slr_diag/
+
+### Расчет регрессионного анализа
+
+```{r, eval=TRUE}
+model_Gmat <- lm(students$G_mat ~ students$absences_mat)
+summary(model_Gmat)
+```
 
 ## Корреляционный анализ
 
@@ -82,7 +106,7 @@ knitr::include_graphics("docs/images/correlation.jpeg")
 
 **Коэффициент корреляции** -- это показатель силы и направления связи между переменными. По сути это ковариация переменных, но взвешенная на стандартные отклонения этих переменных. Это сделано для того, чтобы стандартизовать коэффициент, уйти от абсолютных значений к относительным и расположить этот коэффицент в границах [-1;1]. Для коэффициента корреляции Пирсена:
 
-<p align="center"> $\text{corr}(x,y) = r_{xy} = \frac{\text{cov(x, y)}}{sd_x sd_y}$</p>
+<p align="center"> $\text{corr}(x,y) = r_{xy} = \frac{\text{cov(x, y)}}{sd_x sd_y} = \frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{(n-1)sd_x sd_y}$</p>
 
 **Коэффициент детерминации** -- показатель, в какой степении изменчивость данных объясняется этой переменной
 
@@ -111,8 +135,9 @@ http://guessthecorrelation.com/
 ### Допущения для корреляционного теста
 
 1. ЗП и НП измерены в количественной или порядковой шкале
-2. ЗП распределена нормально -- обсуждали эту проверку [здесь](#param_nonparam)
-3. ЗП распределена линейно и монотонно -- то есть нет выборосов, нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
+2. Распределение НП по ЗП линейно -- то есть нет выборосов, нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
+3. (не обязательно) ЗП распределена нормально -- обсуждали эту проверку [здесь](#param_nonparam)
+
 
 ### Непараметрические аналоги
 
