--- a/09-ttest_anova.Rmd
+++ b/09-ttest_anova.Rmd
@@ -319,11 +319,18 @@ kable(students[1:10,]) %>% scroll_box(width = "100%")
 
 4) Выберем статистический критерий для проверки. Сделаем проверку ЗП на нормальность и сравним дисперсии двух выборок. 
 
-```{r, eval=TRUE, message = FALSE, warning= FALSE}
+```{r, eval=TRUE, message = FALSE, warning= FALSE, out.width="60%"}
 students %>% 
   ggplot(aes(x=G_mat, y = ..density..)) +
   geom_histogram() +
   geom_density() +
+  theme_minimal()
+```
+```{r, eval=TRUE, message = FALSE, warning= FALSE, out.width="60%"}
+students %>% 
+  ggplot(aes(sample=G_mat)) +
+  stat_qq() +
+  stat_qq_line() +
   theme_minimal()
 ```
 
@@ -353,6 +360,7 @@ students %>%
   ggplot(aes(x=Mjob, y = G_mat)) +
   geom_boxplot(aes(fill = Mjob)) +
   scale_fill_viridis(discrete=TRUE) +
+  # stat_summary(fun.data=mean_se, geom="errorbar", color="black", width=0.2) +
   theme_minimal()
 ```
 
@@ -363,4 +371,12 @@ students %>%
   geom_boxplot(aes(fill = Mjob), width=.1) +
   scale_fill_viridis(discrete=TRUE) +
   theme_minimal()
+```
+```{r}
+# students %>% 
+#   ggplot(aes(x=Mjob, y = G_mat)) +
+#   geom_point(aes(fill = Mjob)) +
+#   scale_fill_viridis(discrete=TRUE) +
+#   stat_summary(fun.data=mean_se, geom="errorbar", color="black", width=0.2) +
+#   theme_minimal()
 ```
