--- a/10-linear_models.Rmd
+++ b/10-linear_models.Rmd
@@ -3,6 +3,7 @@
 До этого мы рассматривали виды статистического анализа, когда нужно было сравнить средние значения в нескольких группах. Зависимая переменная всегда была количественная (ее среднее значение по группам мы и сравнивали), а независимая -- категориальная, принимала конечное число значений, и каждое ее значение -- отдельный уровень НП, отдельная группа.
 
 Теперь мы переходим к статистическим критериям, которые используются, когда обе переменные, и ЗП, и НП -- количественные.
+
 ```{r, eval=TRUE, echo = FALSE, message = FALSE}
 library(tidyverse)
 library(kableExtra)
@@ -26,9 +27,156 @@ students %>%
   mutate(absences_por_groups = ifelse(absences_por <=5, "less", ifelse(absences_por <=15, "middle", "more"))) -> students
 ```
 
-## Линейная регрессия 
+## Корреляционный анализ {#corr_test}
+
+**Корреляция** -- это связь между переменными. Несмотря на то, что она называется так же, как и один из двух видов связи между переменными, корреляционную связь можно выявить с помощью в целом любых видов анализа -- ведь когда мы получаем результаты статистических критериев, мы понимем только, что две переменные связаны (или нет), но не можем сделать вывод о том, причинно-следственная это связь или корреляционная.
+
+Здесь речь пойдет именно про **корреляционный анализ** -- специальный вид анализа для определения значимости линейной связи только между двумя количественными или порядковыми переменными. 
+
+Чтобы вывести формулу и смысл корреляции, познакомимся с понятием ковариации.
+
+**Ко-вариация (co-variance)** -- это мера со-изменчивости данных, показатель того, как наблюдения по двум количественным переменным меняются друг относительно друга.
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/correlation.jpeg")
+```
+Картинка [отсюда](https://angelgardt.github.io/SFDA2022/book/twoway-anova.html#factor_interaction) </p>
+
+<p align="center"> $\text{cov}(x,y)=\frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{n-1}$</p>
+
+*Шок-контент: попробуйте посчитать ковариацию переменной самой с собой и посмотрите на получившуюся формулу: ничего не напоминает?*
+
+<div>
+<details>
+<summary>*Ковариация самой с собой*</summary>
+<p align="center"> $\text{cov}(x,x)=\frac{\sum_{i=1}^n (x_i - \bar x) (x_i - \bar x )}{n-1} = \frac{\sum_{i=1}^n (x_i - \bar x )^2}{n-1}$</p>
+
+И это дисперсия!
+
+</details>
+</div>
+
+**Коэффициент корреляции** -- это показатель силы и направления связи между переменными. За силу связи отвечает модуль числа, за направление -- знак корреляции. По сути, это ковариация переменных, но взвешенная на стандартные отклонения этих переменных. Это сделано для того, чтобы стандартизовать коэффициент, уйти от абсолютных значений к относительным и расположить этот коэффицент в границах [-1;1]. Для коэффициента корреляции Пирсона (корреляции двух количественных переменных):
+
+<p align="center"> $\text{corr}(x,y) = r_{xy} = \frac{\text{cov(x, y)}}{sd_x sd_y} = \frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{(n-1)sd_x sd_y}$</p>
+
+**Коэффициент детерминации** -- показатель, в какой степении изменчивость данных объясняется этой выбранной независимой переменной. В случае, если у нас только одна НП, то коэффициент детерминации -- практически то же самое, что и корреляция, только взятая в квадрат:
+
+<p align="center"> $R^2 = r_{xy}^2 = \frac{\text{cov(x, y)}}{sd_x sd_y} = \frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{(n-1)sd_x sd_y}$</p>
+
+https://rpsychologist.com/correlation/
+
+http://guessthecorrelation.com/
+
+### Корреляционный тест
+
+Гипотезы о наличии линейной связи между переменными проверяются при помощи корреляционного теста. Это точно такой же статистический критерий, как и те, что мы уже разобрали. По сути -- ровно то же самое, что линейная регрессия с одной переменной. Корреляционный тест применяется, когда и ЗП, и НП являются количественными переменными либо выраженными в порядковкой шкале (но не номинативной). Для количественной шкалы обычно используется коэффициент корреляции Пирсона, для порядковой или для количественной переменной с малым числом наблюдений -- коэффициент корреляции Спирмена.
+
+Корреляционный тест использует -- вы не поверите -- уже знакомое нам T-распределение Стьюдента!
+(*то есть, нам надо запомнить вообще всего два распределения: T-распределение и F-распределение*)
+
+Число степеней свободы вычисляется по формуле
+
+<p align="center">$df = n - 2$, n -- число наблюдений </p>
+
+Нулевая и альтернативная гипотезы для корреляционного теста:
+
+<p align="center">$H_0$: $r_{xy} = 0$ </p>
+<p align="center">$H_1$: $r_{xy} \neq 0$ </p>
+
+Как и остальные критерии, он имеет допущения.
+
+### Допущения для корреляционного теста
+
+1. ЗП и НП измерены в количественной или порядковой шкале
+2. Распределение НП по ЗП линейно -- то есть нет выборосов, нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
+3. (не обязательно) ЗП распределена нормально -- обсуждали эту проверку [здесь](#param_nonparam)
+
+Примеры, как может выглядеть нелинейное распределение:
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="100%"}
+knitr::include_graphics("docs/images/Correlation_examples2.svg.png")
+```
+</p>
+
+### Непараметрические аналоги
+
+Если ЗП сильно отличается от нормального распределения, или выборка мала, или ЗП закодирована в порядковой шкале -- в коррялционном тесте используется коэффициент корреляции Спирмена вместо Пирсена, и это единственное различие.
+
+Есть еще тау-Кендалла, это почти то же самое, что и корреляция Спирмена, но мы не будем ее рассматривать, так как она применяется крайне редко.
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
+knitr::include_graphics("docs/images/scheme-corr.png")
+```
+Из статьи в википедии про [корреляцию](https://en.wikipedia.org/wiki/Correlation)</p>
+
+### Расчет корреляционного теста
+
+Проведем тест для следующей гипотезы.
+
+> `Чем ниже студенты оценивают качество семейных отношений famrel, тем выше они отмечают частоту употребления алкоголя Walc `
+
+```{r eval=TRUE, echo = FALSE, message = FALSE}
+kable(students[1:10,]) %>% scroll_box(width = "100%") 
+```
+
+Пойдем также по алгоритму.
+
+ЗП -- порядковая, НП -- порядковая. Наша гипотеза не о сравнении групп между собой, а то, что эти переменные коррелируют, между ними есть линейная связь.
+
+Так как ЗП и НП порядковые, мне нужно использовать непараметрический аналог корреляциии Пирсона -- ранговую корреляцию Спирмена (либо порядковую логистическую регрессию (если я хочу, чтобы связь имела предсказательную силу), но об этом не в этот раз).
+
+```{r, eval=TRUE}
+cor.test(students$famrel, students$Walc, method = 'spearman')
+```
+Первый вариант визуализации -- мозаичный плот: размер плитки отражает частоту совпадения таких значений двух переменных. Указываем  НП как x=product(НП), и ЗП как fill = ЗП.
+
+```{r, eval=TRUE}
+library(ggmosaic)
+students %>% 
+  ggplot(aes()) + 
+  geom_mosaic(aes(x = product(famrel), fill = Walc)) +
+  scale_fill_viridis(discrete=TRUE) +
+  theme_minimal() 
+```
+
+Другой вариант -- хитмеп, как в коррелограмме, где размеры фиксированные, а за частоту совпадений отвечает цвет.
+```{r, eval=TRUE}
+students %>% 
+  ggplot(aes(x = as.factor(famrel), y = as.factor(Walc))) + 
+  geom_bin2d() +
+  scale_fill_viridis() +
+  theme_minimal() +
+  theme(panel.grid.major = element_blank(), 
+        panel.grid.minor = element_blank())
+```
+### Интерпретация результатов
+
+Важно, что при очень большой выборке даже совсем слабая корреляционная связь будет достигать статистической значимости
+
+<p align="center"> 
+```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
+knitr::include_graphics("docs/images/corr_causation.png")
+```
+</p>
+
+### Корреляционные матрицы
+
+Часто встречется анализ корреляционных матриц -- когда корреляции вычисляются попарно для каждой матрицы переменных. Это можно встретить, например, при корреляции опросников: допустим, есть опросник О1 и О2. В опроснике О1 есть субшкалы С11, С12, С13, С14, С15, а в О2 соответственно -- С21, С22, С23, С24, С25. Тогда мы можем построить корреляционную матрицу для субшкал этих опросников.
+
+## Линейный регрессионный анализ
 
 Линейная регрессия -- это ровно та же известная нам ANOVA, только если заменить категориальные НП на количественные!
+
+А еще линейная регрессия -- это то же самое, что корреляция, только для нескольких НП. Совмещая ANOVA и корреляционный анализ, получили линейный регрессионный!
+
+Регрессионный анализ -- довольная мощная штука, потому что здесь мы впервые начинаем говорить о *предсказательной функции* анализа. Выходит, что регрессионный анализ может применяться:
+
+* Для проверки гипотез о наличии линейной связи между количественными или порядковыми переменными
+* Для предсказания значений ЗП за пределами имеющихся данных 
 
 ### Коэффициенты регрессии
 
@@ -83,111 +231,3 @@ https://gallery.shinyapps.io/slr_diag/
 model_Gmat <- lm(students$G_mat ~ students$absences_mat)
 summary(model_Gmat)
 ```
-
-## Корреляционный анализ
-
-**Корреляция** -- это связь между переменными.
-
-Корреляция -- это, по сути, то же самое, что и линейная регрессия с одним фактором.
-
-Чтобы вывести ее формулу и смысл, познакомимся с понятием ковариации.
-
-**Ко-вариация (co-variance)** -- это мера со-изменчивость данных, показатель того, как наблюдения по переменным меняются друг относительно друга.
-
-<p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="70%"}
-knitr::include_graphics("docs/images/correlation.jpeg")
-```
-Картинка [отсюда](https://angelgardt.github.io/SFDA2022/book/twoway-anova.html#factor_interaction) </p>
-
-<p align="center"> $\text{cov}(x,y)=\frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{n-1}$</p>
-
-**Коэффициент корреляции** -- это показатель силы и направления связи между переменными. По сути это ковариация переменных, но взвешенная на стандартные отклонения этих переменных. Это сделано для того, чтобы стандартизовать коэффициент, уйти от абсолютных значений к относительным и расположить этот коэффицент в границах [-1;1]. Для коэффициента корреляции Пирсена:
-
-<p align="center"> $\text{corr}(x,y) = r_{xy} = \frac{\text{cov(x, y)}}{sd_x sd_y} = \frac{\sum_{i=1}^n (x_i - \bar x) (y_i - \bar y )}{(n-1)sd_x sd_y}$</p>
-
-**Коэффициент детерминации** -- показатель, в какой степении изменчивость данных объясняется этой переменной
-
-https://rpsychologist.com/correlation/
-
-http://guessthecorrelation.com/
-
-### Корреляционный тест
-
-Гипотезы о наличии корреляции между переменными проверяются при помощи корреляционного теста. Это точно такой же статистический критерий, по сути -- ровно то же самое, что линейная регрессия с одной переменной. Корреляционный тест применяется, когда и ЗП, и НП являются количественными переменными либо выраженными в порядковкой шкале (но не номинативной). Для количественной шкалы обычно используется коэффициент корреляции Пирсена, для порядковой -- коэффициент корреляции Спирмена.
-
-Корреляционный тест использует -- вы не поверите -- уже знакомое нам T-распределение Стьюдента!
-(*то есть, нам надо запомнить вообще всего два распределения: T-распределение и F-распределение*)
-
-Число степеней свободы вычисляется по формуле
-
-<p align="center">$df = n - 2$, n -- число наблюдений </p>
-
-Нулевая и альтернативная гипотезы для корреляционного теста:
-
-<p align="center">$H_0$: $r_{xy} = 0$ </p>
-<p align="center">$H_1$: $r_{xy} \neq 0$ </p>
-
-Как и остальные критерии, он имеет допущения.
-
-### Допущения для корреляционного теста
-
-1. ЗП и НП измерены в количественной или порядковой шкале
-2. Распределение НП по ЗП линейно -- то есть нет выборосов, нет картины нелинейной взаимосвязи или скоплений данных в разных местах.
-3. (не обязательно) ЗП распределена нормально -- обсуждали эту проверку [здесь](#param_nonparam)
-
-
-### Непараметрические аналоги
-
-Если ЗП сильно отличается от нормального распределения, или выборка мала, или ЗП закодирована в порядковой шкале -- в коррялционном тесте используется коэффициент корреляции Спирмена вместо Пирсена, и этоо единственное различие.
-
-### Расчет корреляционного теста
-
-Проведем тест для следующей гипотезы.
-
-> `Чем ниже студенты оценивают качество семейных отношений famrel, тем выше они отмечают частоту употребления алкоголя Walc `
-
-```{r eval=TRUE, echo = FALSE, message = FALSE}
-kable(students[1:10,]) %>% scroll_box(width = "100%") 
-```
-
-Пойдем также по алгоритму.
-
-ЗП -- порядковая, НП -- порядковая. Наша гипотеза не о сравнении групп, об ассоциативной (корреляционной) связи.
-
-Так как ЗП и НП порядковые, мне нужно использовать непараметрический аналог корреляциии Пирсона -- ранговую корреляцию Спирмена (либо порядковую логистическую регрессию (если я хочу, чтобы связь имела предсказательную силу)).
-
-```{r, eval=TRUE}
-cor.test(students$famrel, students$Walc, method = 'spearman')
-```
-Первый вариант визуализации -- мозаичный плот: размер плитки отражает частоту совпадения таких значений двух переменных. Указываем  НП как x=product(НП), и ЗП как fill = ЗП.
-
-```{r, eval=TRUE}
-library(ggmosaic)
-students %>% 
-  ggplot(aes()) + 
-  geom_mosaic(aes(x = product(famrel), fill = Walc)) +
-  scale_fill_viridis(discrete=TRUE) +
-  theme_minimal() 
-```
-
-Другой вариант -- хитмеп, как в коррелограмме, где размеры фиксированные, а за частоту совпадений отвечает цвет.
-```{r, eval=TRUE}
-students %>% 
-  ggplot(aes(x = as.factor(famrel), y = as.factor(Walc))) + 
-  geom_bin2d() +
-  scale_fill_viridis() +
-  theme_minimal() +
-  theme(panel.grid.major = element_blank(), 
-        panel.grid.minor = element_blank())
-```
-### Интерпретация результатов
-
-Важно, что при очень большой выборке даже совсем слабая корреляционная связь будет достигать статистической с=значимости
-
-<p align="center"> 
-```{r eval=TRUE, echo = FALSE, message = FALSE, fig.align = 'center', out.width="80%"}
-knitr::include_graphics("docs/images/corr_causation.png")
-```
-</p>
-
