--- a/09-ttest_anova.Rmd
+++ b/09-ttest_anova.Rmd
@@ -127,7 +127,7 @@ students_2 %>%
 Нулевая и альтернативные гипотеза для ANOVA:
 
 <p align="center">$H_0$: $\mu_1 = \mu_2 = ... =\mu_n$ </p>
-<p align="center">$H_1$: $\mu_1 \neq \mu_2 \neq ... \neq \mu_n$ </p>
+<p align="center">$H_1$: Есть хотя бы одно неравенство: $\mu_1 \neq \mu_2 \neq ... \neq \mu_n$ </p>
 
 
 Как вообще получается, что нам нужно сделать больше двух сравнений?
