--- a/09-ttest_anova.Rmd
+++ b/09-ttest_anova.Rmd
@@ -299,15 +299,15 @@ ANOVA говорит, что в каких-то группах есть знач
 
 ### Вычисление ANOVA и непараметрических аналогов
 
-Посмотрим опять на данные и поисследуем зависимость балла по математике (переменная `G_mat`) от того, живут ли студенты в городах (переменная `address` значение U (urban)) или деревнях (переменная `address` значение R).
+Посмотрим опять на данные и поисследуем зависимость балла по математике (переменная `G_mat`) от работы матери (переменная `Mjob`).
 
 ```{r eval=TRUE, echo = FALSE, message = FALSE}
 kable(students[1:10,]) %>% scroll_box(width = "100%") 
 ```
 
-1) Формулируем эмпирическю гипотезу. Уже обсуждали, что ЗП здесь -- `G_mat`, количественная непрерывная. НП -- `address`, категориальная номинативная, включает 2 уровня -- U и  R.
+1) Формулируем эмпирическю гипотезу. Уже обсуждали, что ЗП здесь -- `G_mat`, количественная непрерывная. НП -- `Mjob`, категориальная номинативная, включает 5 уровней.
 
-<p align="center">`G_mat` ~ `address`</p>
+<p align="center">`G_mat` ~ `Mjob`</p>
 
 2) Формулируем нулевую гипотезу:
 
@@ -340,7 +340,6 @@ library("ez")
 model_abs_mat_ez <-  ezANOVA(data = students, dv = G_mat, wid = student,
                            between = Mjob)
 model_abs_mat_ez
-summary(model_abs_mat_ez)
 ```
 
 6) Как интпрерпретировать результаты? Ключевая для нас статистика -- это F-значение
